# collector-node

./: .gitignore  .pylintrc  Makefile  README.md  collector.py  pyproject.toml  validator.env
.github/workflows/: release.yml
requirements/: local.txt  requirements.txt
services/: README.md  cardano-node.service  cnt-indexer.service  ogmios.service
src/collector_node/: collector_node.py  config.py  feed_helper.py  flock.py  version.py
startup/: start_node.sh  start_ogmios.sh
