[project]

name = "collector-node"
dynamic = ["version", "dependencies"]
description = "Orcfax collector node"
readme = "README.md"

requires-python = ">=3.10"

authors = [
  {name = "R. Spencer", email = "ross@orcfax.io" },
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}

[project.urls]
"Homepage" = "https://orcfax.io"
"Source" = "https://github.com/orcfax/collector-node/"

[project.scripts]
collector-node = "collector_node.collector_node:main"

[build-system]
requires = ["setuptools>=67.8.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
